[gd_scene load_steps=12 format=3 uid="uid://b512d0xx2fr0d"]

[ext_resource type="Shader" uid="uid://cku2yi4knc8xa" path="res://Shaders/smooth_pixels.gdshader" id="1_hmje7"]
[ext_resource type="Script" uid="uid://bc5xyiliw0jeq" path="res://Scripts/clouds.gd" id="2_1fgmn"]
[ext_resource type="Texture2D" uid="uid://bgmbg0tvrnenh" path="res://Sprites/Wolken_Sprites.png" id="2_kt4y7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1fgmn"]
shader = ExtResource("1_hmje7")

[sub_resource type="AtlasTexture" id="AtlasTexture_jrb1r"]
atlas = ExtResource("2_kt4y7")
region = Rect2(1, 1, 177, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n5e8"]
atlas = ExtResource("2_kt4y7")
region = Rect2(422, 133, 143, 60)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ir4an"]
load_path = "res://.godot/imported/Wolken_Sprites.png-f72f8b663549e4eceeb333f7c63a7635.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_1fgmn"]
atlas = SubResource("CompressedTexture2D_ir4an")
region = Rect2(182, 1, 226, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_hple7"]
atlas = SubResource("CompressedTexture2D_ir4an")
region = Rect2(5, 104, 171, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_58mpk"]
atlas = SubResource("CompressedTexture2D_ir4an")
region = Rect2(205, 122, 204, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahou8"]
atlas = SubResource("CompressedTexture2D_ir4an")
region = Rect2(419, 4, 154, 57)

[node name="clouds" type="Parallax2D"]
material = SubResource("ShaderMaterial_1fgmn")
use_parent_material = true
script = ExtResource("2_1fgmn")

[node name="cloudLayerBackground" type="Node2D" parent="."]

[node name="cloud1" type="Sprite2D" parent="cloudLayerBackground"]
position = Vector2(-283, 149)
scale = Vector2(3.0621471, 3)
texture = SubResource("AtlasTexture_jrb1r")

[node name="cloud2" type="Sprite2D" parent="cloudLayerBackground"]
position = Vector2(358, 139)
scale = Vector2(3.0621471, 3)
texture = SubResource("AtlasTexture_6n5e8")

[node name="cloud3" type="Sprite2D" parent="cloudLayerBackground"]
use_parent_material = true
position = Vector2(-681, 220)
scale = Vector2(1.5, 1.5)
texture = SubResource("AtlasTexture_1fgmn")

[node name="cloud4" type="Sprite2D" parent="cloudLayerBackground"]
use_parent_material = true
position = Vector2(876, 325)
scale = Vector2(4.0192537, 3.0819483)
texture = SubResource("AtlasTexture_hple7")

[node name="cloud5" type="Sprite2D" parent="cloudLayerBackground"]
use_parent_material = true
position = Vector2(260, 557)
scale = Vector2(5.117647, 5.109375)
texture = SubResource("AtlasTexture_58mpk")

[node name="cloud6" type="Sprite2D" parent="cloudLayerBackground"]
use_parent_material = true
position = Vector2(1031, 511.99997)
scale = Vector2(3.166028, 3.1609104)
texture = SubResource("AtlasTexture_ahou8")
